# gemini

./: Cargo.toml
crypto-crab/: Cargo.toml
crypto-crab-macros/: Cargo.toml
crypto-crab-macros/src/: lib.rs
crypto-crab/src/: algo.rs  bin.rs  candle.rs  decimal.rs  lib.rs  period.rs  tick.rs  time.rs  util.rs  window.rs
gemini/: Cargo.toml
gemini/src/: chrono.rs  common.rs  currency.rs  decimal.rs  error.rs  lib.rs  symbol.rs  util.rs
gemini/src/rest/: auction.rs  auction_history.rs  candles.rs  client.rs  mod.rs  order_book.rs  price_feed.rs  ticker.rs  trade_history.rs
gemini/src/ws/: client.rs  heartbeat.rs  mod.rs
gemini/src/ws/market/: auction.rs  change.rs  mod.rs  trade.rs
gemini/src/ws/marketv2/: auction.rs  candle.rs  l2.rs  mod.rs  trade.rs
gui/: Cargo.toml
gui/src/: app.rs  candlestick.rs  lib.rs  main.rs  order_book.rs
market/: Cargo.toml
market/src/: lib.rs  order_book.rs  stats.rs
