[package]
name = "crypto-crab"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "mybin"
path = "src/bin.rs"

[dependencies]
rust_decimal = { version = "1.15", features = ["maths"] }
num-traits = "0.2"
chrono = "0.4"
static_assertions = "1.1"
crypto-crab-macros = { path = "../crypto-crab-macros" }

[dev-dependencies]
rust_decimal_macros = "1.15"