[package]
name = "gemini"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.15.0"
serde_urlencoded = "0.7"
typed-builder = "0.9"
strum = "0.21"
strum_macros = "0.21"
rust_decimal_macros = "1.15"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.14", features = ["tokio-runtime", "tokio-native-tls"] }