[package]
name = "gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version="0.3", features=["canvas", "tokio"] }
iced_native = "0.4"
iced_futures = "0.3"
plotters-iced = { path = "../../plotters-iced" }
plotters = "0.3"
plotters-backend = "0.3"
gemini = { version = "0.1", path = "../gemini" }
itertools = "0.10"
tokio = { version = "1", features = ["full"] }
async-tungstenite = { version = "0.14", features = ["tokio-runtime", "tokio-native-tls"] }
futures-util = "0.3"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"